# test_panzir

./: .gitignore  Makefile  README.md  app.py  app_no_bd.py  app_no_db.py  pyproject.toml  run.py  tests.py
app/: config.py  database.py  models.py  routes.py  tasks.db
project_tests/: test.bd  tests_bd.py  tests_no_bd.py  tests_no_db.py
