 [tool.poetry]
name = "test-panzir"
version = "0.1.0"
description = "REST-like API ToDoList"
authors = ["Igor Loskutov <omfi017@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.0"
sqlalchemy = "^2.0.23"
flask-jwt-extended = "^4.5.3"
passlib = "^1.7.4"
bcrypt = "^4.0.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
